tests/break/break.exp
break.js:6
  6:         var y:number = x; // error: boolean !~> number
                            ^ boolean. This type is incompatible with
  6:         var y:number = x; // error: boolean !~> number
                   ^^^^^^ number

break.js:8
  8:     var w:number = z; // 2 errors: ?string !~> number
                        ^ possibly uninitialized variable. This type is incompatible with
  8:     var w:number = z; // 2 errors: ?string !~> number
               ^^^^^^ number

break.js:8
  8:     var w:number = z; // 2 errors: ?string !~> number
                        ^ string. This type is incompatible with
  8:     var w:number = z; // 2 errors: ?string !~> number
               ^^^^^^ number

break.js:16
 16:         var y:number = x; // error: boolean !~> number
                            ^ boolean. This type is incompatible with
 16:         var y:number = x; // error: boolean !~> number
                   ^^^^^^ number

break.js:19
 19:         var z:number = x; // 2 errors: (boolean | string) !~> number
                            ^ boolean. This type is incompatible with
 19:         var z:number = x; // 2 errors: (boolean | string) !~> number
                   ^^^^^^ number

break.js:19
 19:         var z:number = x; // 2 errors: (boolean | string) !~> number
                            ^ string. This type is incompatible with
 19:         var z:number = x; // 2 errors: (boolean | string) !~> number
                   ^^^^^^ number

break.js:23
 23:     var w:number = x; // 2 errors: (boolean | string) !~> number
                        ^ boolean. This type is incompatible with
 23:     var w:number = x; // 2 errors: (boolean | string) !~> number
               ^^^^^^ number

break.js:23
 23:     var w:number = x; // 2 errors: (boolean | string) !~> number
                        ^ string. This type is incompatible with
 23:     var w:number = x; // 2 errors: (boolean | string) !~> number
               ^^^^^^ number

break.js:31
 31:       let y:number = x; // error: boolean !~> number
                          ^ boolean. This type is incompatible with
 31:       let y:number = x; // error: boolean !~> number
                 ^^^^^^ number

break.js:35
 35:       let z:number = x; // 2 errors: (boolean | string) !~> number
                          ^ boolean. This type is incompatible with
 35:       let z:number = x; // 2 errors: (boolean | string) !~> number
                 ^^^^^^ number

break.js:35
 35:       let z:number = x; // 2 errors: (boolean | string) !~> number
                          ^ string. This type is incompatible with
 35:       let z:number = x; // 2 errors: (boolean | string) !~> number
                 ^^^^^^ number

break.js:40
 40:     var w:number = x; // 2 errors: (boolean | string) !~> number
                        ^ boolean. This type is incompatible with
 40:     var w:number = x; // 2 errors: (boolean | string) !~> number
               ^^^^^^ number

break.js:40
 40:     var w:number = x; // 2 errors: (boolean | string) !~> number
                        ^ string. This type is incompatible with
 40:     var w:number = x; // 2 errors: (boolean | string) !~> number
               ^^^^^^ number

break.js:46
 46:         var y:number = z;
                            ^ string. This type is incompatible with
 46:         var y:number = z;
                   ^^^^^^ number

break.js:50
 50:     var w:number = z; // error: string !~> number
                        ^ string. This type is incompatible with
 50:     var w:number = z; // error: string !~> number
               ^^^^^^ number


Found 15 errors
